# qt-creator-terminalplugin

./: .gitignore  .gitmodules  CMakeLists.txt  README  TerminalPlugin.json.in  findsupport.cpp  findsupport.h  terminal.json.in  terminal.pro  terminalplugin.cpp  terminalplugin.h  terminalwindow.cpp  terminalwindow.h
